4.39

- Changed: Enemy AI CAS now adjust firing position if player has moved
- Changed: Main target sidemission non AI objects must now also be destroyed by satchels
- Fixed: Database mission progress autosave (already in the 4.38 reupload at GitHub)
- Fixed: Revive spectating was using missionnamespace var name for unit reference which sometimes doesn't return anything; switched to UID
- Fixed: If a mash got destroyed (or a FARP) then the marker was not removed correctly
- Fixed: Call CAS was broken because of a wrong variable name
- Fixed: Class rhsgref_BRDM2_ATGM_msv no longer exists in RHS leading to script errors during vehicle creation
- Fixed: Don't delete uniform, vest, headgear or backpack if players ends up with none of them when Virtual Arsenal gets closed
- Fixed: Number of units did get reduced for paratroopers over main targets when d_smallgrps was on
- Updated: Russian translation by Babayka
 