@@ -1,0 +1,197 @@
+[Default]
+
+Version = 1  
+;; Used incase there is ever a breaking change, or to inform user in log about a new feature.
+
+Strip Chars = ";[]"
+;; List of characters to strip out  
+Strip Chars Mode = 0
+;; 0 = Strip Bad Chars, 1 = Strip + Log Bad Chars, 2 = Return Error & Log Bad Chars  
+;;     Note: Logging on works when sending data to database.
+
+
+;; [playerInsert]
+;; SQL1_1 = INSERT INTO players 
+;; SQL1_2 = 		(playerid, name, playtime, infkills, softveckills, armorkills, airkills, deaths, totalscore, radiotowerkills, numplayedonserver, campscaptured) 
+;; SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?,?);
+
+;; SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
+
+[playerInsert]
+SQL1_1 = INSERT INTO players 
+SQL1_2 = 		(playerid, name) 
+SQL1_3 = 		VALUES(?,?);
+
+SQL1_INPUTS = 1, 2
+
+[playerUpdate]
+SQL1_1 = UPDATE players
+SQL1_2 = 		SET name=?, playtime=? WHERE playerid=?;
+
+SQL1_INPUTS = 1, 2, 3
+
+[playerExists]
+SQL1_1 = SELECT CASE
+SQL1_2 =    WHEN EXISTS(SELECT name FROM players WHERE playerid = ?)
+SQL1_3 =           THEN 'true' ELSE 'false'
+SQL1_4 = END
+
+SQL1_INPUTS = 1
+
+[playerGet]
+SQL1_1 = SELECT name, playtime, infkills, softveckills, armorkills, airkills, deaths, totalscore, radiotowerkills, mtsmkills, numplayedonserver, campscaptured, teamkills, revives FROM players WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1-string, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+
+[playerGetTS]
+SQL1_1 = SELECT totalscore, infkills, softveckills, armorkills, airkills, deaths FROM players WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6
+
+[playerGetPT]
+SQL1_1 = SELECT playtime WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1
+
+[numplayedAdd]
+SQL1_1 = UPDATE players SET numplayedonserver = numplayedonserver + 1, name = ? WHERE playerid=?;
+
+SQL1_INPUTS = 1, 2
+
+[campAdd]
+SQL1_1 = UPDATE players SET campscaptured = campscaptured + 1 WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+[radiotAdd]
+SQL1_1 = UPDATE players SET radiotowerkills = radiotowerkills + 1 WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+[mtsmAdd]
+SQL1_1 = UPDATE players SET mtsmkills = mtsmkills + 1 WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+[teankillsAdd]
+SQL1_1 = UPDATE players SET teamkills = teamkills + 1 WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+[revivesAdd]
+SQL1_1 = UPDATE players SET revives = revives + 1 WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+[updatePlayer]
+SQL1_1 = UPDATE players SET infkills = infkills + ?, softveckills = softveckills + ?, armorkills = armorkills + ?, airkills = airkills + ?, deaths = deaths + ?, totalscore = ?, playtime = playtime + ?, teamkills = teamkills + ? WHERE playerid = ?;
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
+
+[missionInsert]
+SQL1_1 = INSERT INTO missionsave
+SQL1_2 = (name, d_maintargets, d_maintargets_list, d_current_target_index, d_cur_sm_idx, d_resolved_targets, d_recapture_indices, d_side_missions_random, d_current_mission_counter, d_searchintel, d_bonus_vecs_db, d_worldname, d_combiname, missionname, d_retaken_farpspos, d_vrespawn_vecs)
+SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
+
+[missionttInsert]
+SQL1_1 = INSERT INTO missionsavett
+SQL1_2 = (name, d_maintargets, d_maintargets_list, d_current_target_index, d_cur_sm_idx, d_resolved_targets, d_recapture_indices, d_side_missions_random, d_current_mission_counter, d_searchintel, d_bonus_vecs_db_w, d_bonus_vecs_db_e, d_worldname, d_points_blufor, d_points_opfor, d_kill_points_blufor, d_kill_points_opfor, d_points_array, d_combiname, missionname)
+SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20
+
+[missionUpdate]
+SQL1_1 = UPDATE missionsave
+SQL1_2 = 		SET d_maintargets=?, d_maintargets_list=?, d_current_target_index=?, d_cur_sm_idx=?, d_resolved_targets=?, d_recapture_indices=?, d_side_missions_random=?, d_current_mission_counter=?, d_searchintel=?, d_bonus_vecs_db=?, d_retaken_farpspos=?, d_vrespawn_vecs=? WHERE d_combiname=?;
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+
+[missionTTUpdate]
+SQL1_1 = UPDATE missionsavett
+SQL1_2 = 		SET d_maintargets=?, d_maintargets_list=?, d_current_target_index=?, d_cur_sm_idx=?, d_resolved_targets=?, d_recapture_indices=?, d_side_missions_random=?, d_current_mission_counter=?, d_searchintel=?, d_bonus_vecs_db_w=?, d_bonus_vecs_db_e=?, d_points_blufor=?, d_points_opfor=?, d_kill_points_blufor=?, d_kill_points_opfor=?, d_points_array=? WHERE d_combiname=?;
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17
+
+[missionGet]
+SQL1_1 = SELECT d_maintargets, d_maintargets_list, d_current_target_index, d_cur_sm_idx, d_resolved_targets, d_recapture_indices, d_side_missions_random, d_current_mission_counter, d_searchintel, d_bonus_vecs_db, missionname, d_retaken_farpspos, d_vrespawn_vecs FROM missionsave WHERE d_combiname=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11-string, 12, 13
+
+[missionttGet]
+SQL1_1 = SELECT d_maintargets, d_maintargets_list, d_current_target_index, d_cur_sm_idx, d_resolved_targets, d_recapture_indices, d_side_missions_random, d_current_mission_counter, d_searchintel, d_bonus_vecs_db_w, d_bonus_vecs_db_e, d_points_blufor, d_points_opfor, d_kill_points_blufor, d_kill_points_opfor, d_points_array, missionname FROM missionsavett WHERE d_combiname=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17-string
+
+[missionGet2]
+SQL1_1 = SELECT d_maintargets, d_maintargets_list, d_current_target_index, d_cur_sm_idx, d_resolved_targets, d_recapture_indices, d_side_missions_random, d_current_mission_counter, d_searchintel, d_bonus_vecs_db, d_combiname, d_retaken_farpspos, d_vrespawn_vecs FROM missionsave WHERE missionname=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11-string, 12
+
+[missionttGet2]
+SQL1_1 = SELECT d_maintargets, d_maintargets_list, d_current_target_index, d_cur_sm_idx, d_resolved_targets, d_recapture_indices, d_side_missions_random, d_current_mission_counter, d_searchintel, d_bonus_vecs_db_w, d_bonus_vecs_db_e, d_points_blufor, d_points_opfor, d_kill_points_blufor, d_kill_points_opfor, d_points_array, d_combiname FROM missionsavett WHERE missionname=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17-string
+
+[missionsGet]
+SQL1_1 = SELECT name FROM missionsave WHERE d_worldname=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1-string
+
+[missionsttGet]
+SQL1_1 = SELECT name FROM missionsavett WHERE d_worldname=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1-string
+
+[missionsaveDel]
+SQL1_1 = DELETE FROM missionsave WHERE missionname=?;
+
+SQL1_INPUTS = 1
+
+[missionsaveDelTT]
+SQL1_1 = DELETE FROM missionsavett WHERE missionname=?;
+
+SQL1_INPUTS = 1
+
+[getTop10Players]
+SQL1_1 = SELECT name, playtime, infkills, softveckills, armorkills, airkills, deaths, totalscore, radiotowerkills, mtsmkills, numplayedonserver, campscaptured, teamkills, revives FROM players ORDER BY totalscore DESC LIMIT 0, 25;
+
+OUTPUT = 1-string, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
+
+[domParamsInsertN]
+SQL1_1 = INSERT INTO dom_params2 
+SQL1_2 = 		(params_title,param_name,param_value) 
+SQL1_3 = 		VALUES(?,?,?);
+
+SQL1_INPUTS = 1,2,3
+
+[getDomParams2]
+SQL1_1 = SELECT param_name, param_value FROM dom_params2 WHERE params_title=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT =1-string, 2
+
+[getDomSettings]
+SQL1_1 = SELECT name, value FROM dom_settings;
+
+OUTPUT =1-string, 2
