@@ -1,5 +1,10 @@
 4.39
 
+ATTENTION: domination-custom.ini file has changed (update it with the one available in the 7z download file)
+ATTENTION2: The missionsave table in the Domination sql database has changed, either execute DAddColumn_d_vrespawn_vecs_4_39.sql (in Heidi for example) or make the changes yourself 
+
+- Changed: In the non TT versions the positions of the default Domination base vehicles and all bonus vehicles is now saved to missionsave too, if those vehicles are alive and more than 700 meters away from base
+           Additionally, if an ammobox is loaded is saved too and if MHQs are deployed is also saved
 - Changed: Enemy AI CAS now adjust firing position if player has moved
 - Changed: Main target sidemission non AI objects must now also be destroyed by satchels
 - Fixed: Database mission progress autosave (already in the 4.38 reupload at GitHub)
